# mira

./: .gitignore  Dockerfile  Makefile  mira.py  pyproject.toml
.github/workflows/: build-check.yml
misc/doc/: BUILD_ISSUES.md
misc/infra/: checks.py  cli.py  color.py  config.py  prompt.py  shell.py  state.py  targets.py  tasks.py  tui.py
misc/patches/: README.md
misc/patches/custom_firmware/: README.md  custom_matrix.patch  latest_working_firmware.apj
src/dependencies/custom_msgs/: CMakeLists.txt
src/dependencies/utils/: CMakeLists.txt  package.xml
src/dependencies/utils/include/utils/: image_source.hpp
src/dependencies/utils/utils/: image_source.py
src/dependencies/vision_boundingbox/: package.xml
src/dependencies/vision_boundingbox/scripts/: pipeline.py
src/dependencies/vision_boundingbox/vision_boundingbox/: detection_node.py
src/mira2_control_master/: package.xml  setup.py
src/mira2_control_master/launch/: alt_master_normalized.launch  commands_normaliser.launch  guided_master.launch  mavros_odom.launch.py
src/mira2_control_master/mira2_control_master/: alt_master_normalized.py  commands_normaliser.py  guided_master.py
src/mira2_perception/: CMakeLists.txt  package.xml
src/mira2_perception/config/: bottomcam.ini  bottomcam.npz
src/mira2_perception/launch/: camera_bottom.launch.py  camera_zed.launch
src/mira2_perception/scripts/: aruco_tracker.py
src/mira2_pid_control/: CMakeLists.txt
src/mira2_pid_control/src/: bucket_p1.py
