<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mira2_control_master</name>
  <version>0.0.0</version>
  <description>Primary MAVLink interface to the Pixhawk flight controller. Publishes vehicle telemetry and relays ROS 2 commands as RC overrides. Includes emergency kill-switch monitor and docking state machine.</description>
  <maintainer email="davidnoronha@outlook.in">david</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>custom_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-pymavlink</exec_depend>
  <exec_depend>mavros</exec_depend>
  <exec_depend>mavros_extras</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
